results/SpecGenBench/4-shot/log-CanConstruct-2023_11_05_00_00_24.txt
class CanConstruct {
    //@ requires ransomNote != null && magazine != null;
    //@ ensures \result == (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; cnt[i] >= 0));
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ loop_invariant 0 <= i && i <= magazine.length();
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a']++);
        //@ decreases magazine.length() - i;
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a']--);
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] >= 0);
        //@ decreases ransomNote.length() - i;
        for (char c : ransomNote.toCharArray()) {
            cnt[c - 'a']--;
            if(cnt[c - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: cannot find symbol
    //@ ensures \result == (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; cnt[i] >= 0));
                                                                                                          ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:9: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= magazine.length();
                                ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:9: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= magazine.length();
                                     ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:10: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a']++);
                                                         ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:10: error: incompatible types: int cannot be converted to boolean
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a']++);
                                                                                         ^
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:11: error: cannot find symbol
        //@ decreases magazine.length() - i;
                                          ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:15: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
                                ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:15: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
                                     ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:16: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a']--);
                                                         ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:16: error: incompatible types: int cannot be converted to boolean
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a']--);
                                                                                           ^
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:17: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] >= 0);
                                                         ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:18: error: cannot find symbol
        //@ decreases ransomNote.length() - i;
                                            ^
  symbol:   variable i
  location: class CanConstruct
12 errors

